@@ -49,6 +49,20 @@ void art_irect_intersect (ArtIRect *dest,
 /* Return true if the rectangle is empty. */
 int art_irect_empty (const ArtIRect *src);
 
+/* Make a copy of the rectangle. */
+void art_drect_copy (ArtDRect *dest, const ArtDRect *src);
+
+/* Find the smallest rectangle that includes both source rectangles. */
+void art_drect_union (ArtDRect *dest,
+		      const ArtDRect *src1, const ArtDRect *src2);
+
+/* Return the intersection of the two rectangles */
+void art_drect_intersect (ArtDRect *dest,
+			  const ArtDRect *src1, const ArtDRect *src2);
+
+/* Return true if the rectangle is empty. */
+int art_drect_empty (const ArtDRect *src);
+
 void
 art_drect_affine_transform (ArtDRect *dst, const ArtDRect *src,
 			   const double matrix[6]);
